--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.1",
@@ -21,10 +21,11 @@
     "hardhat-typechain": "^0.3.5"
   },
   "dependencies": {
-    "antd": "^4.23.4",
-    "styled-components": "^5.3.6",
     "@openzeppelin/contracts": "^4.7.3",
+    "antd": "^4.23.4",
     "dotenv": "^16.0.2",
-    "solidity-bytes-utils": "^0.8.0"
+    "next": "^14.2.0",
+    "solidity-bytes-utils": "^0.8.0",
+    "styled-components": "^5.3.6"
   }
 }
